Till Chapter 14:Added login and Access restriction

--- a/app/views/line_items/_form.html.erb
+++ b/app/views/line_items/_form.html.erb
@@ -13,11 +13,11 @@
 
   <div class="field">
     <%= f.label :product_id %><br>
-    <%= f.text_field :product_id %>
+    <%= f.text_field :product_id, size: 40 %>
   </div>
   <div class="field">
     <%= f.label :cart_id %><br>
-    <%= f.text_field :cart_id %>
+    <%= f.text_field :cart_id , size: 40%>
   </div>
   <div class="actions">
     <%= f.submit %>
