--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,10 +26,22 @@
 <% end %>
 </div>
 </ul>
+
+<% if session[:user_id] %>
+<ul>
+<li><%= link_to 'Orders',orders_path%></li>
+<li><%= link_to 'Products', products_path %></li>
+<li><%= link_to 'Users',users_path%></li>
+</ul>
+<%= button_to 'Logout', logout_path, method: :delete %>
+<% end %>
 </div>
 
 
 <div id="main">
+<%if notice %>
+<p id="notice"><%= notice %></p>
+<%end%>
 <%= yield %>
 </div>
 </div>
