--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -13,19 +13,19 @@
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, size: 40 %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description, rows: 5%>
+    <%= f.text_area :description, rows: 5, cols: 39%>
   </div>
   <div class="field">
     <%= f.label :image_url %><br>
-    <%= f.text_field :image_url %>
+    <%= f.text_field :image_url , size: 40%>
   </div>
   <div class="field">
     <%= f.label :price %><br>
-    <%= f.text_field :price %>
+    <%= f.text_field :price , size: 40%>
   </div>
   <div class="actions">
     <%= f.submit %>
