--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <h1>Listing Products (<%=@products.count %>)</h1>
 
@@ -27,3 +26,4 @@ data: { confirm: 'Are you sure?' } %>
 <br>
 
 <%= link_to 'New Product', new_product_path %>
+<%= link_to 'Admin', admin_url %>
